test/errors/array_types_error/zs/packed_array_unpackable_string_element_error.zs
package packed_array_unpackable_string_element_error;

struct PackedArrayUnpackableStringElementError
{
    packed uint32 array1[];
    packed string array2[]; // unpackable
};
